--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@unhead/vue": "^1.8.11",
     "autoprefixer": "^10.4.18",
+    "clsx": "^2.1.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
