--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://nipaaaa1.github.io/results-summary/",
   "dependencies": {
     "@unhead/vue": "^1.8.11",
     "autoprefixer": "^10.4.18",
     "clsx": "^2.1.0",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
